test/library/standard/Map/readMapStringsBytes.chpl

use Map;
use IO;

var m : map(string, string);
stdin.withDeserializer(defaultDeserializer).read(m);
